[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlsentinel"
version = "0.1.4.dev3"
description = "Python SDK for monitoring and validating Machine Learning models."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    { name = "Adari Narasimha Dhoni" }
]

dependencies = [
    "requests>=2.31.0"
]

keywords = [
    "machine-learning",
    "mlops",
    "ai",
    "sdk",
    "monitoring"
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Narasimha440/mlsentinal.git"
Repository = "https://github.com/Narasimha440/mlsentinal.git"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]